Generate javadoc for all projects
Run the javadoc task during :codeQuality.

Many existing classes have invalid javadoc. This commit updates all javadoc to be conformant
and to pass when executing the javadoc task.

May errors were related to invalid header tags, where the JDK is now more strict about the
ordering of these tags. e.g. h3 cannot appear without an h2 appearing before.

Another common one was an extra <p> tag at the end of the javadoc.